fix center alignment when on small screens

--- a/web/src/styles/module/table/_query.scss
+++ b/web/src/styles/module/table/_query.scss
@@ -15,4 +15,13 @@
   .table-cell .label {
     display: inline-flex;
   }
+
+  .table .table-cell {
+    &.align-center,
+    &.align-right {
+      width: 100%;
+      text-align: left;
+      justify-content: space-between;
+    }
+  }
 }
